# analytical_service

./: .gitignore  README.md  docker-compose.yaml  entrypoint.sh
mongo-init/: init.js
src/: config.py  containers.py  pyproject.toml
src/api/: main.py  projects.py  tasks.py
src/application/events/: check_events.py
src/application/interactors/: base_exception.py
src/application/interactors/analytics/: creating_analytics_interactor.py
src/application/interactors/assignees/: crud_assignees_interactor.py  exceptions.py
src/application/interactors/projects/: crud_projects_interactor.py  exceptions.py
src/application/interactors/tasks/: crud_tasks_interactor.py  exceptions.py
src/application/interfaces/: mongo_repo.py
src/application/interfaces/decode_tokens/: decode_tokens.py
src/application/use_cases/analytics/: creating_analytics.py
src/application/use_cases/assignees/: crud_assignees_use_case.py  dto.py
src/application/use_cases/projects/: crud_projects_use_case.py  dto.py
src/application/use_cases/tasks/: crud_tasks_use_case.py  dto.py
src/domain/entities/average_task_completion/: entity.py
src/domain/entities/nums_of_tasks_per_week/: entity.py
src/domain/entities/quantities_collection /: entity.py
src/domain/entities/status_collection /: entity.py
src/infra/repos/mongo/: mongo_repo_impl.py
src/infra/repos/motor/: db.py
src/infra/services/decode_jwt_token/: decode_jwt_token.py  exceptions.py  get_token.py
src/infra/services/kafka/: consumer.py
