[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "DenisHrtn",email = "denispython16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "confluent-kafka (>=2.8.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
